Fix location markers not erasing on location update. Add new styling to fix overlapping options on smaller screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -59,10 +59,11 @@
 	#dropdowns, #searchBar {
 		flex-direction: column;
 		align-items: flex-start;
+		justify-content: space-between;
 	}
 
 	#filtersDiv {
-		height: 250px;
+		height: 365px;
 		width: 170px;
 	}
 
@@ -81,7 +82,7 @@
 	}
 
 	#filtersVisibilityTrigger {
-    	height: 250px;
+    	height: 365px;
     	width: 40px;
     	top: 0px;
     	left: 170px;
@@ -108,5 +109,9 @@
     	-o-transform: translate(-170px, 0);
    		-ms-transform: translate(-170px, 0);
     	transform: translate(-170px, 0);
+	}
+
+	.orangeButton {
+		margin: 5px;
 	}
 }
